--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,7 @@ python-magic = "*"
 django-simple-history = "*"
 django-two-factor-auth = "*"
 phonenumbers = "*"
+requests-oauthlib = "*"
 
 [requires]
 python_version = "3.7"
